css color and layout bug

--- a/back-end/flask/static/form.css
+++ b/back-end/flask/static/form.css
@@ -105,7 +105,7 @@ main a span:nth-child(1) {
 }
 input[type="submit"]{
   
-  color: #03e9f4;
+  color:#FFF;
   width:100%;
   height:100%;
   background: transparent;
